--- a/CSS/CustomerProductDetail.css
+++ b/CSS/CustomerProductDetail.css
@@ -30,8 +30,8 @@
 }
 
 .product-image img {
-    max-width: 100%;
-    height: auto;
+    max-width: 728px;
+    height: 468px;
     border-radius: 8px;
 }
 
