--- a/CSS/adminNavbar.css
+++ b/CSS/adminNavbar.css
@@ -161,12 +161,21 @@ input[type=text] {
 .sub-menu {
     background: #fff;
     padding: 20px;
-    margin: 10px;
+    margin: 1px 10px 10px 10px;
+    box-shadow: 8px 8px 8px rgba(0, 0, 0, 0.1);
 }
+
 .user-info {
     display: flex;
+    flex-direction: column;
     align-items: center;
 }
+
+.user-info h2 {
+    font-weight: 200;
+    height: 20px;
+}
+
 .user-info h3{
     font-weight: 200;
     opacity: 50%;
