--- a/CSS/navbar.css
+++ b/CSS/navbar.css
@@ -43,7 +43,7 @@
     top: 0;
     width: 220px;
     z-index: 10;
-    overflow-y: auto;
+    overflow: visible;
     text-align: center;
     box-shadow: 2px 0px 5px rgba(0, 0, 0, 0.1);
     padding-top: 20px;
