--- a/CSS/adminNavbar.css
+++ b/CSS/adminNavbar.css
@@ -147,6 +147,124 @@ a:-webkit-any-link {
     box-shadow: 8px 8px 8px rgba(0, 0, 0, 0.1);
 }
 
+
+
+    /* General styles for the left menu */
+    .left-menu-content {
+        font-family: "Mitr", sans-serif;
+        font-size: 16px;
+        background-color: #ffffff;
+        color: #000000;
+        height: 100vh;
+        width: 260px;
+        padding: 20px;
+        box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+    }
+
+    .left-menu-content .logo {
+        text-align: center;
+        font-size: 20px;
+        font-weight: bold;
+        margin-bottom: 20px;
+        color: #000000;
+    }
+
+    .left-menu-content .nav a {
+        text-decoration: none;
+        color: #000000;
+        display: flex;
+        align-items: center;
+        padding: 10px 20px;
+        border-radius: 5px;
+        transition: color 0.3s, background-color 0.3s;
+        margin-bottom: 10px;
+    }
+
+    .left-menu-content .nav a i {
+        margin-right: 10px;
+        font-size: 18px;
+    }
+
+    .left-menu-content .nav a.active {
+        font-weight: bold;
+        color: #ffffff;
+        background-color:rgb(114, 188, 248);
+    }
+
+    .left-menu-content .nav a:hover {
+        background-color:rgb(110, 187, 255);
+        color: #ffffff;
+    }
+
+ /* General styles for the dropdown */
+ .dropdown {
+    position: relative;
+}
+
+.dropdown-header {
+    cursor: pointer;
+    font-size: 16px;
+    font-weight: normal;
+    padding: 10px 20px;
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: #000000;
+    border-radius: 5px;
+    transition: color 0.3s, background-color 0.3s;
+}
+
+.dropdown-header.active {
+    font-weight: bold;
+    color: #ffffff;
+    background-color: #0078D7;
+}
+
+.dropdown-header:hover {
+    color: #ffffff;
+    background-color: #0056a3;
+}
+
+.dropdown-content {
+    max-height: 0;
+    overflow: hidden;
+    flex-direction: column;
+    margin-left: 20px;
+    margin-top: 10px;
+    opacity: 0;
+    transform: translateY(-10px);
+    transition: max-height 0.5s ease, opacity 0.5s ease, transform 0.5s ease;
+}
+
+.dropdown:hover .dropdown-content {
+    max-height: 200px; /* Adjust based on the content height */
+    opacity: 1;
+    transform: translateY(0);
+}
+
+.dropdown-content a {
+    padding: 8px 15px;
+    font-size: 14px;
+    color: #000000;
+    background-color: #f9f9f9;
+    border-left: 3px solid transparent;
+    transition: background-color 0.3s, border-color 0.3s;
+    border-radius: 5px;
+}
+
+.dropdown-content a.active {
+    font-weight: bold;
+    color: #ffffff;
+    background-color: #0078D7;
+    border-left: 3px solid #0078D7;
+}
+
+.dropdown-content a:hover {
+    background-color: #0056a3;
+    border-left: 3px solid #0056a3;
+    color: #ffffff;
+}
+
 .user-info {
     display: flex;
     flex-direction: column;
