--- a/CSS/adminStyle.css
+++ b/CSS/adminStyle.css
@@ -1,6 +1,4 @@
-/* layout */
-
-
+/* Layout */
 .admin-wrapper {
     display: flex;
 }
@@ -11,7 +9,6 @@
 }
 
 .admin-wrapper .admin-content {
-
     flex: 8;
     padding: 100px 75px 20px;
     margin-left: 260px;
@@ -21,21 +18,20 @@
     overflow-y: scroll;
 }
 
-.admin-content .page-title{
+.admin-content .page-title {
     text-align: center;
     margin-bottom: 1.5rem;
 }
 
-/* Section button  */
-
+/* Section Button */
 a.btn.btn-big {
     background: blue;
     border-radius: 5px;
     color: white;
+    transition: background 0.3s;
 }
 
 a.btn.btn-big:hover {
-    transition-duration: 5ms;
     background: black;
 }
 
@@ -47,17 +43,26 @@ a.btn.btn-big [aria-current]:hover {
     background-color: #00d9ff;
 }
 
-/* Content */
-
+/* Table Content */
 table {
     width: 100%;
     border-collapse: collapse;
     font-size: 1.1rem;
 }
+
 th, td {
     padding: 15px;
     text-align: left;
     border-bottom: 1px solid red;
+}
+
+/* Action Links */
+.edit, .delete, .publish {
+    border: none;
+    background: none;
+    color: inherit;
+    cursor: pointer;
+    transition: color 0.3s, text-decoration 0.3s;
 }
 
 .edit {
@@ -66,8 +71,6 @@ th, td {
 
 .delete {
     color: red;
-    border:none; 
-    background:none;
 }
 
 .publish {
@@ -76,10 +79,9 @@ th, td {
 
 .edit:hover, .delete:hover, .publish:hover {
     text-decoration: underline;
-
 }
 
-
+/* Form Styles */
 form div {
     margin-bottom: 15px;
 }
