--- a/CSS/CustomerProductDetail.css
+++ b/CSS/CustomerProductDetail.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     align-items: center;
     padding: 20px;
+    padding-top: 4%;
     background-color: #f5f5f5;
 }
 
