--- a/CSS/login.css
+++ b/CSS/login.css
@@ -5,7 +5,7 @@ body {
     font-family: 'Roboto', sans-serif;
     line-height: 1.5;
     min-height: 100vh;
-    background: linear-gradient(135deg, #e0e0e0, #cfcfcf);
+    background: linear-gradient(135deg, #e0e0e0, #bbbbbb);
     flex-direction: column;
     margin: 0;
 }
