--- a/CSS/navbar.css
+++ b/CSS/navbar.css
@@ -1,6 +1,6 @@
 /* Layout Styles */
 .layout .right-main .top-nav {
-    background-color: #ECB159;
+    background-color: #F5EEDC;
     border-bottom: 1px solid #33343a;
     border-color: rgba(51, 52, 58, 0.5);
     height: 80px;
@@ -82,6 +82,7 @@
 
 .left-menu .left-menu-content .nav a span {
     padding: 0;
+    font-size: 20px;
     transition: color 0.5s;
 }
 
