--- a/CSS/CustomerReserveHistoryStatus.css
+++ b/CSS/CustomerReserveHistoryStatus.css
@@ -1,8 +1,8 @@
 .status-pending {
-    background-color: yellow;
+    background-color: rgb(255, 194, 61);
     color: black;
     padding: 5px 10px;
-    border-radius: 5px;
+    border-radius: 20px;
     font-weight: bold;
 }
 
@@ -10,7 +10,7 @@
     background-color: green;
     color: white;
     padding: 5px 10px;
-    border-radius: 5px;
+    border-radius: 20px;
     font-weight: bold;
 }
 
@@ -18,6 +18,6 @@
     background-color: red;
     color: white;
     padding: 5px 10px;
-    border-radius: 5px;
+    border-radius: 20px;
     font-weight: bold;
 }
