--- a/CSS/CustomerReserveSelection.css
+++ b/CSS/CustomerReserveSelection.css
@@ -11,6 +11,7 @@
 
 .big-card {
     flex: 1;
+    max-height: 460px;
     background: #fff;
     padding: 30px;
     border-radius: 10px;
@@ -19,9 +20,10 @@
     text-align: center;
     text-decoration: none;
     color: inherit;
-    display: block;
+    display: flex;
     position: relative;
     overflow: hidden;
+    flex-direction: column;
 }
 
 .big-card:hover {
